<package>
  <name>hpp_ros</name>
  <version>0.1.0</version>
  <description>
    Bridge between hpp and ros
  </description>
  <author>Florent Lamiraux</author>
  <maintainer email="hpp@laas.fr">Florent Lamiraux</maintainer>
  <license>LGPL v2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hpp-corbaserver</build_depend>
</package>
